--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
                             </div>
                             <div class="professor">
                                 <strong>Professor: </strong>
-                                <span>
+                                <a href="http://www.ipt.nthu.edu.tw/ultrafast/">
                                     Prof. Dr. Shang-Da Yang
-                                </span>
+                                </a>
                             </div>
                             <div class="projects">
                                 <h5>Projects:</h5>
@@ -291,13 +291,31 @@
                                         <span class="fa-li">
                                             <i class="fa-solid fa-wrench"></i>
                                         </span>
-                                        Designing and building high-speed spectrometer for ultrafast transient absorption spectroscopy.
+                                        Designing and building high-speed spectrometer for ultrafast transient absorption spectroscopy (in collaboration with <i>Victoria University of Wellington</i>).
                                     </li>
                                     <li class="project-item">
                                         <span class="fa-li">
                                             <i class="fa-solid fa-wrench"></i>
                                         </span>
                                         Improving and generating sub-5 fs pulses with multiple-plate continuum (MPC) via double-pass geometry.
+                                    </li>
+                                    <li class="project-item">
+                                        <span class="fa-li">
+                                            <i class="fa-solid fa-wrench"></i>
+                                        </span>
+                                        Improving stimulated Raman scattering imaging quality using MPC (in collaboration with the Brain Research Center (BRC), NTHU).
+                                    </li>
+                                    <li class="project-item">
+                                        <span class="fa-li">
+                                            <i class="fa-solid fa-wrench"></i>
+                                        </span>
+                                        Designing and building multi-pass cells (in collaboration with the <i>Physics department of National Taiwan University (NTU)</i>).
+                                    </li>
+                                    <li class="project-item">
+                                        <span class="fa-li">
+                                            <i class="fa-solid fa-magnifying-glass"></i>
+                                        </span>
+                                        Simulating spectral broadening behaviors in gas-filled hollow-core fibers (in collaboration with <i>Industrial Technology Research Institute (ITRI)</i>)
                                     </li>
                                     <li class="project-item">
                                         <span class="fa-li">
@@ -309,12 +327,12 @@
                                         <span class="fa-li">
                                             <i class="fa-solid fa-magnifying-glass"></i>
                                         </span>
-                                        Studying the ultrafast dynamics of 2D materials (MoS<sub>2</sub>, MoSe<sub>2</sub>, WS<sub>2</sub>) and novel light-emitting materials (perovskite).
+                                        Studying the ultrafast dynamics of 2D materials (MoS<sub>2</sub>, MoSe<sub>2</sub>, WS<sub>2</sub>) and novel light-emitting materials (perovskite) (in collaboration with the <i>department of Materials Science and Engineering</i>, <i>department of Chemistry of National Tsing Hua University (NTHU)</i> and the <i>Department of Electronic Engineering of Ming Chi University of Technology</i>).
                                     </li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="flex-shrink-0 edu-time mt-2">
+                        <div class="flex-shrink-0 edu-time mt-2 mt-md-0">
                             <span class="text-primary">
                                 Apr. 2021 - Now
                             </span>
@@ -336,9 +354,9 @@
                             </div>
                             <div class="professor">
                                 <strong>Professor: </strong>
-                                <span>
+                                <a href="https://www.baum.uni-konstanz.de/research/">
                                     Prof. Dr. Peter Baum
-                                </span>
+                                </a>
                             </div>
                             <div class="projects">
                                 <h5>Projects:</h5>
@@ -364,7 +382,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="flex-shrink-0 edu-time mt-2">
+                        <div class="flex-shrink-0 edu-time mt-2 mt-md-0">
                             <span class="text-primary">
                                 Jan. 2020 - Dec. 2020
                             </span>
@@ -396,9 +414,9 @@
                             </div>
                             <div class="advisor">
                                 <strong>Advisor: </strong>
-                                <span>
+                                <a href="https://www.attoworld.de/">
                                     Prof. Dr. Ferenc Krausz
-                                </span>
+                                </a>
                             </div>
                             <div class="thesis">
                                 <strong>Thesis: </strong>
