--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Main CSS  -->
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <!-- Webpage logo -->
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/icon.png" />
 
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -79,7 +79,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#skill_exp">
+                        <a class="nav-link" href="#exp_skill">
                             Skills & Expertise
                         </a>
                     </li>
@@ -280,7 +280,7 @@
                             </div>
                             <div class="professor">
                                 <strong>Professor: </strong>
-                                <a href="http://www.ipt.nthu.edu.tw/ultrafast/">
+                                <a href="http://www.ipt.nthu.edu.tw/ultrafast/" target="_blank">
                                     Prof. Dr. Shang-Da Yang
                                 </a>
                             </div>
@@ -354,7 +354,7 @@
                             </div>
                             <div class="professor">
                                 <strong>Professor: </strong>
-                                <a href="https://www.baum.uni-konstanz.de/research/">
+                                <a href="https://www.baum.uni-konstanz.de/research/" target="_blank">
                                     Prof. Dr. Peter Baum
                                 </a>
                             </div>
@@ -377,7 +377,7 @@
                                         <span class="fa-li">
                                             <i class="fa-solid fa-magnifying-glass"></i>
                                         </span>
-                                        Studying metal-insulator transition in VO<sub>2</sub> using optical-pump, mid-infrared-probe experiments.
+                                        Studying metal-insulator transition in VO<sub>2</sub> using optical-pump / mid-infrared-probe experiments.
                                     </li>
                                 </ul>
                             </div>
@@ -414,13 +414,13 @@
                             </div>
                             <div class="advisor">
                                 <strong>Advisor: </strong>
-                                <a href="https://www.attoworld.de/">
+                                <a href="https://www.attoworld.de/" target="_blank">
                                     Prof. Dr. Ferenc Krausz
                                 </a>
                             </div>
                             <div class="thesis">
                                 <strong>Thesis: </strong>
-                                <a href="#">
+                                <a href="https://edoc.ub.uni-muenchen.de/25390/" target="_blank">
                                     Single-cycle Mid-infrared Pulse Generation via Nonlinear Optics
                                 </a>
                             </div>
@@ -464,8 +464,8 @@
                             </div>
                             <div class="thesis">
                                 <strong>Thesis: </strong>
-                                <a href="#">
-                                    Few-Cycle Pulse Compression from Supercontinuum (Link)
+                                <a href="https://hdl.handle.net/11296/3zcq93" target="_blank">
+                                    Few-Cycle Pulse Compression from Supercontinuum
                                 </a>
                             </div>
                             <div class="note">
@@ -528,78 +528,13 @@
             </section>
             <hr class="m-0" />
 
-            <!-- Skills and Proficiencies-->
-            <section class="resume-section" id="skill_exp">
+            <!-- Proficiencies and Skills-->
+            <section class="resume-section" id="exp_skill">
                 <div class="resume-section-content">
                     <h2 class="mb-5 section-title">
-                        Skills & Expertise
+                        Expertise & Skills
                     </h2>
-                    <div class="subheading mb-3">
-                        Programming Languages & Tools
-                    </div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item">
-                            <i class="fab fa-html5"></i>
-                        </li>
-                        <li class="list-inline-item">
-                            <i class="fab fa-css3-alt"></i>
-                        </li>
-                        <li class="list-inline-item">
-                            <i class="fab fa-js-square"></i>
-                        </li>
-                        <li class="list-inline-item">
-                            <i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i>
-                        </li>
-                        <li class="list-inline-item">
-                            <i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i>
-                        </li>
-                        <li class="list-inline-item">
-                            <i class="fab fa-less"></i>
-                        </li>
-                        <li class="list-inline-item">
-                            <i class="fab fa-wordpress"></i>
-                        </li>
-                        <li class="list-inline-item">
-                            <i class="fab fa-gulp"></i>
-                        </li>
-                        <li class="list-inline-item">
-                            <i class="fab fa-grunt"></i>
-                        </li>
-                        <li class="list-inline-item">
-                            <i class="fab fa-npm"></i>
-                        </li>
-                    </ul>
-                    <div class="subheading mb-3">
-                        Workflow
-                    </div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li">
-                                <i class="fas fa-check"></i>
-                            </span>
-                            Agile Development & Scrum
-                        </li>
-                    </ul>
+                    
                 </div>
             </section>
             <hr class="m-0" />
@@ -614,11 +549,11 @@
             </section>
             <hr class="m-0" />
 
-            <!-- Publications-->
+            <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5 section-title">
-                        Publication List
+                        Awards
                     </h2>
                 </div>
             </section>
