--- a/index.html
+++ b/index.html
@@ -534,7 +534,62 @@
                     <h2 class="mb-5 section-title">
                         Expertise & Skills
                     </h2>
-                    
+                    <h3 class="skill-title">
+                        Software
+                    </h3>
+                    <ul class="skill-list">
+                        <li class="skill-item">
+                            <span>
+                                Matlab
+                            </span>
+                        </li>
+                        <li class="skill-item">
+                            <span>
+                                Solidworks
+                            </span>
+                        </li>
+                        <li class="skill-item">
+                            <span>
+                                Blender
+                            </span>
+                        </li>
+                        <li class="skill-item">
+                            <span>
+                                Origin
+                            </span>
+                        </li>
+                        <li class="skill-item">
+                            <span>
+                                Powerpoint
+                            </span>
+                        </li>
+                        <li class="skill-item">
+                            <span>
+                                Excel
+                            </span>
+                        </li>
+                    </ul>
+                    <h3 class="skill-title">
+                        Research
+                    </h3>
+                    <ul class="skill-list">
+                        <li class="skill-item">
+                            <span>
+                                Ultrafast Optics
+                            </span>
+                        </li>
+                        <li class="skill-item">
+                            <span>
+                                Nonlinear Optics
+                            </span>
+                        </li>
+                        <li class="skill-item">
+                            <span>
+                                Mid-infrared Generation
+                            </span>
+                        </li>
+                        <li class="skill-item"></li>
+                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
