--- a/index.html
+++ b/index.html
@@ -534,62 +534,52 @@
                     <h2 class="mb-5 section-title">
                         Expertise & Skills
                     </h2>
-                    <h3 class="skill-title">
-                        Software
-                    </h3>
-                    <ul class="skill-list">
-                        <li class="skill-item">
-                            <span>
-                                Matlab
-                            </span>
-                        </li>
-                        <li class="skill-item">
-                            <span>
-                                Solidworks
-                            </span>
-                        </li>
-                        <li class="skill-item">
-                            <span>
-                                Blender
-                            </span>
-                        </li>
-                        <li class="skill-item">
-                            <span>
-                                Origin
-                            </span>
-                        </li>
-                        <li class="skill-item">
-                            <span>
-                                Powerpoint
-                            </span>
-                        </li>
-                        <li class="skill-item">
-                            <span>
-                                Excel
-                            </span>
-                        </li>
-                    </ul>
-                    <h3 class="skill-title">
-                        Research
-                    </h3>
-                    <ul class="skill-list">
-                        <li class="skill-item">
-                            <span>
-                                Ultrafast Optics
-                            </span>
-                        </li>
-                        <li class="skill-item">
-                            <span>
-                                Nonlinear Optics
-                            </span>
-                        </li>
-                        <li class="skill-item">
-                            <span>
-                                Mid-infrared Generation
-                            </span>
-                        </li>
-                        <li class="skill-item"></li>
-                    </ul>
+                    <div class="skill-category">
+                        <h3>
+                            Nonlinear Optics
+                        </h3>
+                        <ul class="nonlinear-list">
+                            <li class="nonlinear-item col-6 col-lg-3">
+                                <img src="assets/img/logos/nonlinear-white-light-generation.png" alt="" class="img-fluid">
+                                <div class="nonlinear-item-title">
+                                    White-light Generation
+                                </div>
+                            </li>
+                            <li class="nonlinear-item col-6 col-lg-3">
+                                <img src="assets/img/logos/nonlinear-spectral-broadening.png" alt=""  class="img-fluid">
+                                <div class="nonlinear-item-title">
+                                    Spectral Broadening
+                                </div>
+                            </li>
+                            <li class="nonlinear-item col-6 col-lg-3">
+                                <img src="assets/img/logos/nonlinear-nopa.png" alt=""  class="img-fluid">
+                                <div class="nonlinear-item-title">
+                                    Non-colinear Optical Parametric Amplification (NOPA)
+                                </div>
+                            </li>
+                            <li class="nonlinear-item col-6 col-lg-3">
+                                <img src="assets/img/logos/nonlinear-mir-generation.png" alt=""  class="img-fluid">
+                                <div class="nonlinear-item-title">
+                                    Mid-infrared Generation
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="skill-category">
+                        <h3>
+                            Ultrafast Optics (fs - ps)
+                        </h3>
+                    </div>
+                    <div class="skill-category">
+                        <h3>
+                            Optics
+                        </h3>
+                    </div>
+                    <div class="skill-category">
+                        <h3>
+                            Software123
+                        </h3>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
