--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     </h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0 d-flex justify-content-center align-items-lg-center pb-3">
-                            <img src="assets/img/logos/NTHU_rounded.png" alt="" class="school-logo w-100 h-100">
+                            <img src="assets/img/logos/school-logo/NTHU_rounded.png" alt="" class="school-logo w-100 h-100">
                         </div>
                         <div class="flex-grow-1 exp-info">
                             <h3 class="uni-name">
@@ -340,7 +340,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0 d-flex justify-content-center align-items-lg-center pb-3">
-                            <img src="assets/img/logos/UKonstanz_squared_02.png" alt="" class="school-logo w-100 h-100">
+                            <img src="assets/img/logos/school-logo/UKonstanz_squared_02.png" alt="" class="school-logo w-100 h-100">
                         </div>
                         <div class="flex-grow-1  exp-info">
                             <h3 class="uni-name">
@@ -400,7 +400,7 @@
                     </h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0 d-flex justify-content-center align-items-lg-center pb-3">
-                            <img src="assets/img/logos/LMU_rounded.png" alt="" class="school-logo w-100 h-100">
+                            <img src="assets/img/logos/school-logo/LMU_rounded.png" alt="" class="school-logo w-100 h-100">
                         </div>
                         <div class="flex-grow-1 edu-info">
                             <h3 class="uni-name">
@@ -444,7 +444,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0 d-flex justify-content-center align-items-lg-center pb-3">
-                            <img src="assets/img/logos/NTHU_rounded.png" alt="" class="school-logo w-100 h-100">
+                            <img src="assets/img/logos/school-logo/NTHU_rounded.png" alt="" class="school-logo w-100 h-100">
                         </div>
                         <div class="flex-grow-1 edu-info">
                             <h3 class="uni-name">
@@ -482,7 +482,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0 d-flex justify-content-center align-items-lg-center pb-3">
-                            <img src="assets/img/logos/NTHU_rounded.png" alt="" class="school-logo w-100 h-100">
+                            <img src="assets/img/logos/school-logo/NTHU_rounded.png" alt="" class="school-logo w-100 h-100">
                         </div>
                         <div class="flex-grow-1 edu-info">
                             <h3 class="uni-name">
@@ -508,7 +508,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-shrink-0 d-flex justify-content-center align-items-lg-center pb-3">
-                            <img src="assets/img/logos/TCFSH_squared.png" alt="" class="school-logo w-100 h-100">
+                            <img src="assets/img/logos/school-logo/TCFSH_squared.png" alt="" class="school-logo w-100 h-100">
                         </div>
                         <div class="flex-grow-1 edu-info">
                             <h3 class="uni-name">
@@ -538,46 +538,66 @@
                         <h3>
                             Nonlinear Optics
                         </h3>
-                        <ul class="nonlinear-list">
-                            <li class="nonlinear-item col-6 col-lg-3">
-                                <img src="assets/img/logos/nonlinear-white-light-generation.png" alt="" class="img-fluid">
-                                <div class="nonlinear-item-title">
+                        <ul class="skill-list">
+                            <li class="skill-item col-6 col-lg-3">
+                                <img src="assets/img/logos/nonlinear-optics/nonlinear-white-light-generation.png" alt="" class="img-fluid">
+                                <div class="skill-item-title">
                                     White-light Generation
                                 </div>
                             </li>
-                            <li class="nonlinear-item col-6 col-lg-3">
-                                <img src="assets/img/logos/nonlinear-spectral-broadening.png" alt=""  class="img-fluid">
-                                <div class="nonlinear-item-title">
+                            <li class="skill-item col-6 col-lg-3">
+                                <img src="assets/img/logos/nonlinear-optics/nonlinear-spectral-broadening.png" alt=""  class="img-fluid">
+                                <div class="skill-item-title">
                                     Spectral Broadening
                                 </div>
                             </li>
-                            <li class="nonlinear-item col-6 col-lg-3">
-                                <img src="assets/img/logos/nonlinear-nopa.png" alt=""  class="img-fluid">
-                                <div class="nonlinear-item-title">
+                            <li class="skill-item col-6 col-lg-3">
+                                <img src="assets/img/logos/nonlinear-optics/nonlinear-nopa.png" alt=""  class="img-fluid">
+                                <div class="skill-item-title">
                                     Non-colinear Optical Parametric Amplification (NOPA)
                                 </div>
                             </li>
-                            <li class="nonlinear-item col-6 col-lg-3">
-                                <img src="assets/img/logos/nonlinear-mir-generation.png" alt=""  class="img-fluid">
-                                <div class="nonlinear-item-title">
+                            <li class="skill-item col-6 col-lg-3">
+                                <img src="assets/img/logos/nonlinear-optics/nonlinear-mir-generation.png" alt=""  class="img-fluid">
+                                <div class="skill-item-title">
                                     Mid-infrared Generation
                                 </div>
                             </li>
                         </ul>
                     </div>
-                    <div class="skill-category">
+                    <div class="skill-category mt-4">
                         <h3>
                             Ultrafast Optics (fs - ps)
                         </h3>
+                        <ul class="skill-list">
+                            <li class="skill-item col-6 col-lg-3">
+                                <img src="assets/img/logos/ultrafast-optics/ultrafast-compression.png" alt="" class="img-fluid">
+                                <div class="skill-item-title">
+                                    Pulse Compression
+                                </div>
+                            </li>
+                            <li class="skill-item col-6 col-lg-3">
+                                <img src="assets/img/logos/ultrafast-optics/ultrafast-shaping.png" alt=""  class="img-fluid">
+                                <div class="skill-item-title">
+                                    Pulse Shaping
+                                </div>
+                            </li>
+                            <li class="skill-item col-6 col-lg-3">
+                                <img src="assets/img/logos/ultrafast-optics/ultrafast-measurement.png" alt=""  class="img-fluid">
+                                <div class="skill-item-title">
+                                    Pulse Measurement
+                                </div>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="skill-category">
+                    <div class="skill-category mt-4">
                         <h3>
                             Optics
                         </h3>
                     </div>
-                    <div class="skill-category">
+                    <div class="skill-category mt-4">
                         <h3>
-                            Software123
+                            Software
                         </h3>
                     </div>
                 </div>
