--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
     <body id="page-top">
 
         <!-- 導覽列 -->
-        <nav class="navbar navbar-expand-lg bg-primary fixed-top" id="navigation">
+        <nav class="navbar navbar-expand-xl bg-primary fixed-top" id="navigation">
             <a class="navbar-brand" href="#page-top">
-                <span class="d-block d-lg-none">
+                <span class="d-block d-xl-none">
                     Bo-Han Chen
                 </span>
-                <span class="d-none d-lg-block">
+                <span class="d-none d-xl-block">
                     <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="Portrait photo" />
                 </span>
             </a>
@@ -64,7 +64,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-xl-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#about">
                             About me
@@ -80,11 +80,11 @@
                             Education
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#awards">
                             Awards
                         </a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="#exp_skill">
                             Skills & Expertise
@@ -530,7 +530,7 @@
             </section>
             <hr class="m-0" />
 
-            <!-- Awards-->
+            <!-- Awards
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5 section-title">
@@ -538,7 +538,7 @@
                     </h2>
                 </div>
             </section>
-            <hr class="m-0" />
+            <hr class="m-0" /> -->
 
             <!-- Proficiencies and Skills-->
             <section class="resume-section" id="exp_skill">
